[gd_scene load_steps=4 format=3 uid="uid://ct84uikyra0ks"]

[ext_resource type="Script" path="res://scenes/electronics/led.gd" id="1_23p2d"]
[ext_resource type="Texture2D" uid="uid://bm1y84y4bdtvy" path="res://assets/images/led-bulb.png" id="2_8iuj6"]
[ext_resource type="Texture2D" uid="uid://b8l482bm7op4v" path="res://assets/images/led-base.png" id="2_uo6pq"]

[node name="LED" type="Node2D"]
script = ExtResource("1_23p2d")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_uo6pq")

[node name="BulbSprite2D2" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_8iuj6")

[node name="DarkBulbSprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 0.8)
texture = ExtResource("2_8iuj6")

[node name="InputMarker2D" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-10, 37)

[node name="OutputMarker2D" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(10, 37)
